[project]
name = "s1cli"
version = "0.1.0"
description = "Stage1st 论坛命令行工具 - 一个命令行客户端"
authors = [{ name = "eskiyin" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["stage1st", "discuz", "cli", "tui", "forum"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: BBS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "textual>=0.40.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "rich>=13.0.0",
    "toml>=0.10.2",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
s1cli = "s1cli.__main__:main"

[project.urls]
Homepage = "https://github.com/eskiyin/s1cli"
Repository = "https://github.com/eskiyin/s1cli"
Issues = "https://github.com/eskiyin/s1cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
